--- a/ClientApp/app/app.component.scss
+++ b/ClientApp/app/app.component.scss
@@ -1,12 +1,12 @@
-﻿$navbar-default-bg: #312312;
+$navbar-default-bg: #312312;
 $light-orange: #ff8c00;
 $navbar-default-color: $light-orange;
 
 /* Import Bootstrap & Fonts */
-$icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
-@import "~bootstrap-sass/assets/stylesheets/bootstrap";
+/*$icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
+@import "~bootstrap-sass/assets/stylesheets/bootstrap";*/
 
-
+@import '~bootstrap/dist/css/bootstrap.min.css';
 
 
 /* *** Overall APP Styling can go here ***
