Fix: remove SSR for now - until completely fixed

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@Html.Raw(ViewData["SpaHtml"])
+﻿<!-- @Html.Raw(ViewData["SpaHtml"]) -->
+
+<app-root></app-root>
 
 <script src="~/dist/vendor.js" asp-append-version="true"></script>
 @section scripts {
