--- a/ClientApp/app/containers/home/home.component.html
+++ b/ClientApp/app/containers/home/home.component.html
@@ -53,11 +53,11 @@
 
     <h2> {{ 'SWITCH_LANGUAGE' | translate }}</h2>
 
-    <button class="btn btn-default" (click)="setLanguage('en')">
+    <button class="btn btn-outline-secondary mr-2" (click)="setLanguage('en')">
         <span class="flag-icon flag-icon-us"></span>  {{ 'ENGLISH' | translate }}
     </button>
 
-    <button class="btn btn-default" (click)="setLanguage('no')">
+    <button class="btn btn-outline-secondary" (click)="setLanguage('no')">
         <span class="flag-icon flag-icon-no"></span> {{ 'NORWEGIAN' | translate }}
     </button>
 
