chore(wording): update 5.0 references in text to 6.0

--- a/ClientApp/app/containers/home/home.component.html
+++ b/ClientApp/app/containers/home/home.component.html
@@ -1,8 +1,8 @@
 ﻿<h1>{{ title }}</h1>
 
 <blockquote>
-  <strong>Enjoy the latest features from .NET Core & Angular 5.0!</strong>
-  <br> For more info check the repo here: <a href="https://github.com/MarkPieszak/aspnetcore-angular2-universal">AspNetCore-Angular2-Universal repo</a>
+  <strong>Enjoy the latest features from .NET Core & Angular 6.x!</strong>
+  <br> For more info check the repo here: <a href="https://github.com/MarkPieszak/aspnetcore-angular2-universal">AspNetCore-Angular-Universal repo</a>
   <br><br>
 </blockquote>
 
@@ -10,7 +10,7 @@
   <div class="col-lg-6">
     <h2>{{ 'HOME_FEATURE_LIST_TITLE' | translate }} </h2>
     <ul>
-      <li>ASP.NET Core 2.0 :: ( Visual Studio 2017 )</li>
+      <li>ASP.NET Core 2.1 :: ( Visual Studio 2017 )</li>
       <li>
         Angular 6.* front-end UI framework
         <ul>
