--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
 
     @Html.Raw(ViewData["Styles"])
-
+    <link rel="manifest" href="/manifest.json">
   </head>
   <body>
     @RenderBody()
@@ -21,7 +21,6 @@
     @Html.Raw(ViewData["TransferData"])
     @Html.Raw(ViewData["Scripts"])
 
-    @RenderSection("scripts", required: false)
-
+    @RenderSection("scripts", required: false)   
   </body>
 </html>
