docs(home): add devhelp note

--- a/ClientApp/app/containers/home/home.component.html
+++ b/ClientApp/app/containers/home/home.component.html
@@ -3,7 +3,7 @@
 <blockquote>
   <strong>Enjoy the latest features from .NET Core & Angular 6.x!</strong>
   <br> For more info check the repo here:
-  <a href="https://github.com/MarkPieszak/aspnetcore-angular2-universal">AspNetCore-Angular-Universal repo</a>
+  <a href="https://github.com/MarkPieszak/aspnetcore-angular2-universal" target="_blank">AspNetCore-Angular-Universal repo</a>
   <br>
   <br>
 </blockquote>
@@ -45,15 +45,29 @@
       <li>
         <strong>Issues with this Starter?</strong>
         <br>Please post an issue here:
-        <a href="https://github.com/MarkPieszak/aspnetcore-angular2-universal">AspNetCore-Angular2-Universal repo</a>
+        <a href="https://github.com/MarkPieszak/aspnetcore-angular2-universal" target="_blank">AspNetCore-Angular2-Universal repo</a>
         <br>
         <br>
       </li>
       <!--<li><strong>Issues with <u>Universal</u> itself?</strong> <br>Please post an issue here: <a href="https://github.com/angular/universal">Angular Universal repo</a></li>-->
     </ul>
+
+    <h2><a href="http://www.DevHelp.Online" target="_blank">DevHelp.Online</a></h2>
+
+    <strong>Consulting | Development | Training | Workshops</strong>
+    <br><br>
+    Get your Team or Application up to speed by working with some of the leading industry experts in JavaScript & ASP.NET!<br>
+    <br>
+    <strong>Follow us on Twitter!</strong><br><br>
+    <a href="http://www.twitter.com/DevHelpOnline" target="_blank">@DevHelpOnline</a> | 
+    <a href="http://www.twitter.com/MarkPieszak" target="_blank">@MarkPieszak</a> 
+    <br>
+    <br>
+
   </div>
 
 </div>
+
 
 <div class="row">
   <div class="col-lg-12">
