--- a/ClientApp/app/containers/home/home.component.html
+++ b/ClientApp/app/containers/home/home.component.html
@@ -3,7 +3,7 @@
 <blockquote>
   <strong>Enjoy the latest features from .NET Core & Angular 7.x!</strong>
   <br> For more info check the repo here:
-  <a href="https://github.com/MarkPieszak/aspnetcore-angular2-universal" target="_blank">AspNetCore-Angular-Universal repo</a>
+  <a href="https://github.com/MarkPieszak/aspnetcore-angular-universal" target="_blank">AspNetCore-Angular-Universal repo</a>
   <br>
   <br>
 </blockquote>
@@ -52,14 +52,14 @@
       <!--<li><strong>Issues with <u>Universal</u> itself?</strong> <br>Please post an issue here: <a href="https://github.com/angular/universal">Angular Universal repo</a></li>-->
     </ul>
 
-    <h2><a href="http://www.DevHelp.Online" target="_blank">DevHelp.Online</a></h2>
+    <h2><a href="https://trilon.io" target="_blank">Trilon Consulting - Trilon.io</a></h2>
 
     <strong>Consulting | Development | Training | Workshops</strong>
     <br><br>
-    Get your Team or Application up to speed by working with some of the leading industry experts in JavaScript & ASP.NET!<br>
+    Get your Team or Application up to speed by working with some of the leading industry experts in JavaScript, Node / NestJS, & ASP.NET!<br>
     <br>
     <strong>Follow us on Twitter!</strong><br><br>
-    <a href="http://www.twitter.com/DevHelpOnline" target="_blank">@DevHelpOnline</a> | 
+    <a href="http://www.twitter.com/trilon_io" target="_blank">@trilon_io</a> | 
     <a href="http://www.twitter.com/MarkPieszak" target="_blank">@MarkPieszak</a> 
     <br>
     <br>
